--- a/css/style.css
+++ b/css/style.css
@@ -149,7 +149,7 @@ first div in the grid  and place it in the grid. */
 /* I do not see the image appearing at all */
 .container div:first-child {
   grid-column: 1 / -1;
-  background-image: url("/images/header.jpg");
+  background-image: url(".../images/header.jpg");
   background-repeat: no-repeat;  
 }
 
@@ -194,10 +194,10 @@ first div in the grid  and place it in the grid. */
 @media screen and (min-width: 800px) {
   
   /* Step 9: Write the selector/rule property to style the nav element */
-  nav {
-    padding: 30px 0 30px 0;
-    text-align: right;
-  }
+nav {
+  padding: 30px 0 30px 0;
+  text-align: right;
+}
  
   /* Step 10: Write the selector/rule property to update the .container class */
 .container {
