--- a/css/style.css
+++ b/css/style.css
@@ -107,8 +107,15 @@ Your Code Here
 
 /* Step 1: Write selector/rule property to add an underline when
 links in the navigation are in the hover or focus state.*/
-nav a:hover, nav a:focus {
+
+nav a:focus {
   text-decoration: underline;
+  text-decoration-color: #000000;
+}
+
+nav a:hover {
+  text-decoration: underline;
+  text-decoration-color: #000000;
 }
 
 /* Step 2a: Write selector/rule property to position the default position for the skip class element*/
@@ -128,8 +135,10 @@ nav a:hover, nav a:focus {
 /* Step 3: Write selector/rule property to style all elements when in focus*/
 
 /* Do I use universal selector for this? How do I test focus? */
-*:focus{
+*:focus { 
   border: 2px solid #000000;
+  /* text-decoration: underline;
+  text-decoration-color: #000000; */
 }
 
 /* Step 4: Write selector/rule property to style the container */
