--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,7 @@ Your Code Here
 /* Step 1: Write selector/rule property to add an underline when
 links in the navigation are in the hover or focus state.*/
 
-nav a:hover, nav a:focus {
+nav a:focus, nav a:hover {
   text-decoration: underline;
   text-decoration-color: #000000;
 }
